# gygaxian-entity

./: CMakeLists.txt  Makefile  README.md  StatHelpers.cpp  StatHelpers.h  char_class.cpp  char_class.h  dice_roll.cpp  dice_roll.h  entity.cpp  entity.h  entity_structs_consts.h  items.cpp  items.h  main.cpp  project_headers.h  rogueutil.c  rogueutil.h  skills.cpp  skills.h  ui-test.cpp  ui_structs.h  ui_util.cpp  ui_util.h
characters/: test.json
include/: StatHelpers.h  char_class.h  entity.h  entity_structs_consts.h  items.h  party.h  project_headers.h  rogueutil.h  ui_structs.h  ui_util.h
items/: Armor.json  Arms.json  Clothing.json  Herbs.json  Livestock.json  Misc.json  Provisions.json  Religious.json  TackHarness.json  Transport.json
parties/: test party.json
src/: StatHelpers.cpp  char_class.cpp  entity.cpp  items.cpp  party.cpp  rogueutil.c  ui_util.cpp
